Fix the page flickers when the  search dialog pops up

--- a/source/css/_common/outline/header/github-banner.styl
+++ b/source/css/_common/outline/header/github-banner.styl
@@ -22,7 +22,7 @@ if (hexo-config('github_banner.enable')) {
       color: white;
       fill: var(--theme-color);
       position: absolute;
-      right: 0;
+      right: var(--dialog-scrollgutter, 0);
       top: 0;
       z-index: $zindex-0;
     }
