--- a/source/css/_common/scaffolding/base.styl
+++ b/source/css/_common/scaffolding/base.styl
@@ -16,7 +16,6 @@ body {
   line-height: $line-height-base;
   min-height: 100%;
   position: relative;
-  transition: padding $transition-ease;
 
   if (hexo-config('body_scrollbar.overlay')) {
     overflow-x: hidden;
